# dev-toolbox

./: README.md
.claude/commands/: prepare-context-for-next-chat.md
ai/: README.md
ai/claude-code/: tools-analysis.md
ai/coding-standards/: README.md  philosophy.md  refactor-guide.md
ai/personas/: README.md  pedantic-code-scrutinizer.md  philosophies.md  solutions-architect-pr-reviewer.md
ai/prompt-engineering/: IMPLEMENTATION-PHASES.md  ULTIMATE-DIRECTORY-MASTER-PLAN.md
ai/research-doc-refiner/: CLAUDE.md
ai/skills/: README.md  design-guide.md
ai/stand-alone-agents/: context-relay-agent.md  (+2 more)
architecture-mapper/: .gitignore  README.md  cleanup.sh  config.sh  philosophy.md  run-all.sh  setup.sh
claude-sessions/: README.md  claude-sessions.py
claude-worktrees/: README.md  claude-worktrees.py
demo-generator/: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  pyproject.toml
directory-tree-printer/: README.md  print-directory-tree.sh
docker-cleanser/: README.md  docker-cleanser.sh
medium-post-converter/: README.md  convert.js  package-lock.json  package.json
repo-analyzer/: README.md  cleanup.sh  config.sh  philosophy.md  run-all.sh  setup.sh
repo-content-aggregator/: .gitignore  README.md  aggregate.py  main.py
show-git-history/: README.md  package.json
tui-markdown-browser/: .gitignore  README.md  pyproject.toml
tui-markdown-browser/tui_markdown_browser/: __init__.py  __main__.py  app.py  config.py  messages.py  styles.py
tui-markdown-browser/tui_markdown_browser/widgets/: __init__.py  file_tree.py  preview.py
(+326 files in other folders)
